--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,3 +2,7 @@
 <link rel="stylesheet" href="/css/profile.css">
 
 <h1>Profile page is up with title <%= title %></h1>
+
+<h3>UserName is : <%= userName %></h3>
+<h3>UserEmail is : <%= userEmail %></h3>
+
